# orchid-ls

./: README.md  initialize-req.json  orchid-ls.code-workspace  package-lock.json  package.json
client/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
client/public/: orchid.tmLanguage.json
client/src/: extension.ts
server/: Cargo.toml
server/src/: comm.rs  ctx_map.rs  jrpc.rs  main.rs
server/src/cmd/: errors.rs  fs.rs  init.rs  logging.rs  mod.rs
server/src/orc/: project.rs
server/src/protocol/: docpos.rs  document.rs  error.rs  mod.rs  tokens.rs
