[package]
name = "orchid-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["std", "backtrace"] }
dyn-clone = "1.0.16"
serde_json = "1.0.113"
trait-set = "0.3.0"
