[package]
name = "orchid-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["std", "backtrace"] }
dyn-clone = "1.0.16"
intern-all = "0.2.0"
itertools = "0.12.1"
orchidlang = { version = "0.3", path = "../../orchid" }
serde = { version = "1.0.196", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.113"
trait-set = "0.3.0"
urlencoding = "2.1.3"
