[package]
name = "orchid-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["std", "backtrace"] }
dyn-clone = "1.0.16"
hashbrown = "0.14.3"
intern-all = { version = "0.4.1", features = ["serde"] }
itertools = "0.12.1"
notify = "6.1.1"
orchidlang = { version = "0.3", path = "../../orchid" }
ordered-float = "4.2.0"
serde = { version = "1.0.196", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.113"
similar = "2.4.0"
substack = "1.1.0"
take_mut = "0.2.2"
trait-set = "0.3.0"
url = "2.5.0"
urlencoding = "2.1.3"
